# GoldClaw

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
apps/goldclaw/: Cargo.toml
apps/goldclaw-tui/: Cargo.toml
apps/goldclaw-tui/src/: main.rs
apps/goldclaw-web/: Cargo.toml
apps/goldclaw-web/src/: index.html  main.rs
apps/goldclaw/src/: gateway_handle.rs  main.rs
crates/goldclaw-config/: Cargo.toml
crates/goldclaw-config/src/: lib.rs  tests.rs
crates/goldclaw-connector-stdin/: Cargo.toml
crates/goldclaw-connector-stdin/src/: lib.rs
crates/goldclaw-connector-wecom/: Cargo.toml
crates/goldclaw-connector-wecom/src/: lib.rs
crates/goldclaw-connector-weixin/: Cargo.toml
crates/goldclaw-connector-weixin/src/: lib.rs
crates/goldclaw-core/: Cargo.toml
crates/goldclaw-core/src/: error.rs  lib.rs  models.rs  runtime.rs  tests.rs
crates/goldclaw-doctor/: Cargo.toml
crates/goldclaw-doctor/src/: lib.rs  tests.rs
crates/goldclaw-gateway/: Cargo.toml
crates/goldclaw-gateway/src/: lib.rs  tests.rs
crates/goldclaw-memory/: Cargo.toml
crates/goldclaw-memory/src/: lib.rs  tests.rs
crates/goldclaw-provider-glm/: Cargo.toml
crates/goldclaw-provider-glm/src/: lib.rs
crates/goldclaw-provider-qwen/: Cargo.toml
crates/goldclaw-provider-qwen/src/: lib.rs
crates/goldclaw-runtime/: Cargo.toml
crates/goldclaw-runtime/src/: lib.rs  tests.rs
crates/goldclaw-runtime/src/tools/: bash_exec.rs  edit_file.rs  mod.rs  read_file.rs  update_soul.rs  write_file.rs
crates/goldclaw-store/: Cargo.toml
crates/goldclaw-store/src/: layout.rs  layout_tests.rs  lib.rs  migrations.rs  migrations_tests.rs  sqlite.rs  sqlite_tests.rs  tests.rs
openspec/changes/add-memory-system/: design.md  proposal.md  tasks.md
openspec/changes/add-memory-system/specs/episodic-memory/: spec.md
openspec/changes/add-memory-system/specs/soul-file/: spec.md
openspec/changes/build-rust-personal-ai-assistant/: design.md  proposal.md  tasks.md
openspec/changes/build-rust-personal-ai-assistant/specs/assistant-runtime-core/: spec.md
openspec/changes/build-rust-personal-ai-assistant/specs/channel-connectors/: spec.md
openspec/changes/build-rust-personal-ai-assistant/specs/gateway-daemon/: spec.md
openspec/changes/build-rust-personal-ai-assistant/specs/multi-surface-clients/: spec.md
openspec/changes/build-rust-personal-ai-assistant/specs/setup-and-doctor/: spec.md
