[workspace]
members = [
    "crates/goldclaw-core",
    "crates/goldclaw-config",
    "crates/goldclaw-store",
    "crates/goldclaw-runtime",
    "crates/goldclaw-gateway",
    "crates/goldclaw-doctor",
    "apps/goldclaw",
    "apps/goldclaw-tui",
    "apps/goldclaw-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["GoldClaw"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
dialoguer = "0.12.0"
directories = "6.0.0"
futures-util = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
