[package]
name = "goldclaw-web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
goldclaw-config = { path = "../../crates/goldclaw-config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
