[package]
name = "goldclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer.workspace = true
goldclaw-config = { path = "../../crates/goldclaw-config" }
goldclaw-doctor = { path = "../../crates/goldclaw-doctor" }
goldclaw-gateway = { path = "../../crates/goldclaw-gateway" }
goldclaw-runtime = { path = "../../crates/goldclaw-runtime" }
goldclaw-store = { path = "../../crates/goldclaw-store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
