[package]
name = "goldclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer.workspace = true
goldclaw-config = { path = "../../crates/goldclaw-config" }
goldclaw-connector-stdin = { path = "../../crates/goldclaw-connector-stdin" }
goldclaw-connector-wecom = { path = "../../crates/goldclaw-connector-wecom" }
goldclaw-connector-weixin = { path = "../../crates/goldclaw-connector-weixin" }
goldclaw-core = { path = "../../crates/goldclaw-core" }
goldclaw-doctor = { path = "../../crates/goldclaw-doctor" }
goldclaw-memory = { path = "../../crates/goldclaw-memory" }
goldclaw-gateway = { path = "../../crates/goldclaw-gateway" }
goldclaw-provider-glm = { path = "../../crates/goldclaw-provider-glm" }
goldclaw-runtime = { path = "../../crates/goldclaw-runtime" }
goldclaw-store = { path = "../../crates/goldclaw-store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
