[package]
name = "goldclaw-connector-stdin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
goldclaw-core = { path = "../goldclaw-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
