[package]
name = "goldclaw-connector-weixin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
goldclaw-core = { path = "../goldclaw-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
