[package]
name = "goldclaw-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono.workspace = true
goldclaw-config = { path = "../goldclaw-config" }
goldclaw-store = { path = "../goldclaw-store" }
serde.workspace = true
serde_json.workspace = true
