[package]
name = "goldclaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
goldclaw-core = { path = "../goldclaw-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
