[package]
name = "goldclaw-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
chrono.workspace = true
goldclaw-core = { path = "../goldclaw-core" }
rusqlite.workspace = true
thiserror.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
