[package]
name = "goldclaw-provider-qwen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
goldclaw-core = { path = "../goldclaw-core" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
