[package]
name = "goldclaw-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
chrono.workspace = true
goldclaw-core = { path = "../goldclaw-core" }
goldclaw-store = { path = "../goldclaw-store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
