[package]
name = "goldclaw-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono.workspace = true
goldclaw-config = { path = "../goldclaw-config" }
goldclaw-core = { path = "../goldclaw-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
